examples/test/testpolicy11011.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11011
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key6: value6
      key27: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value44
          key4: value41
      podSelector:
        matchLabels:
          key45: value36
          key5: value45
